Bug 1603036: Call delete_ instead of free_ in XDRBufferObject finalizer r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D56786